RG-905 Animation issue on mobile devices fixed

--- a/Projects/GKWebService/GKWebService/Content/alarmBtn.less
+++ b/Projects/GKWebService/GKWebService/Content/alarmBtn.less
@@ -7,9 +7,6 @@
     background: url('Image/Icon/Alarms/ResetAlarmText.png');
     background-repeat: no-repeat;
     background-position: 7px 7px;
-    -moz-background-size: 50px 50px;
-    -o-background-size: 50px 50px;
-    -webkit-background-size: 50px 50px;
     background-size: 50px 50px;
 }
 
@@ -26,16 +23,28 @@
 }
 
 .alarmBtnGlow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    animation-name: alarmBtnGlowKeyframes;
-    animation-duration: .5s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    pointer-events: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	-moz-animation-name: alarmBtnGlowKeyframes;
+	-o-animation-name: alarmBtnGlowKeyframes;
+	-webkit-animation-name: alarmBtnGlowKeyframes;
+	animation-name: alarmBtnGlowKeyframes;
+	-moz-animation-duration: .5s;
+	-o-animation-duration: .5s;
+	-webkit-animation-duration: .5s;
+	animation-duration: .5s;
+	-moz-animation-iteration-count: infinite;
+	-o-animation-iteration-count: infinite;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+	-moz-animation-direction: alternate;
+	-o-animation-direction: alternate;
+	-webkit-animation-direction: alternate;
+	animation-direction: alternate;
+	pointer-events: none;
 }
 
 .alarmBtnCount {
@@ -53,6 +62,28 @@
     vertical-align: bottom;
     line-height: normal;
     margin: 5px;
+}
+
+@-moz-keyframes alarmBtnGlowKeyframes {
+    from {
+        opacity: 0;
+        filter: alpha(opacity=0);
+    }
+    to {
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
+}
+
+@-webkit-keyframes alarmBtnGlowKeyframes {
+    from {
+        opacity: 0;
+        filter: alpha(opacity=0);
+    }
+    to {
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
 }
 
 @keyframes alarmBtnGlowKeyframes {
@@ -88,9 +119,11 @@
 
 .alarmBtn.disabled .alarmBtnGlow,
 .alarmBtn[disabled] .alarmBtnGlow {
-    opacity: 0;
-    filter: alpha(opacity=0);
-    -webkit-animation-play-state: paused; 
-    animation-play-state: paused;
-    pointer-events: none;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	-webkit-animation-play-state: paused;
+	-moz-animation-play-state: paused;
+	-o-animation-play-state: paused;
+	animation-play-state: paused;
+	pointer-events: none;
 }
